--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [mutmut]
-paths_to_mutate=sbi/inference
+paths_to_mutate=sbi/inference/snle,sbi/inference/snre,sbi/inference/snpe,sbi/simulators/linear_gaussian.py
 
 [metadata]
 description-file = README.md
