--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,11 @@
+# create:
+# conda env create --prefix .sbi_env --file environment.yml
 #
-# Create:
-# $ conda env create --prefix .sbi_env --file environment.yml
+# update:
+# conda env update --prefix .sbi_env --file environment.yml --prune
 #
-# Update:
-# $ conda env update --prefix .sbi_env --file environment.yml --prune
-#
-# Activate:
-# $ conda activate ~/path/to/sbi/.sbi_env
-#
-# Nicer prompt (adds to ~/.condarc):
-# $ conda config --set env_prompt '({name}) '
+# activate (see below for auto-activation):
+# conda activate ~/path/to/sbi/.sbi_env 
 #
 name: sbi_env
 
@@ -18,18 +14,52 @@ channels:
   - pytorch
 
 dependencies:
+  - autopep8
+  - autoflake
+  - black
   - cudatoolkit
+  - flake8
+  - isort
   - jupyter
-  - jupyterlab
   - matplotlib
-  - notebook
+  - nbstripout
+  - numpy
   - pillow
   - pip
   - pip:
-    - "pyknos==0.12"
-    - "pyro-ppl==1.3.1"
-    - -e ".[dev]"
-  - "python >= 3.6.0"
-  - "pytorch >= 1.5.1"
+    - "pyknos@git+https://github.com/mackelab/pyknos.git@v0.10"
+    - pyro-ppl
+    - torchtestcase
+    - -e .  # install package in development mode
+  - pytest
+  - pytest-pep8
+  - python
+  - pytorch
+  - pyyaml
+  - rope
   - scikit-learn
   - scipy
+  - seaborn
+  - tensorboard
+  - tqdm
+ 
+
+# ADDITIONAL INSTRUCTIONS
+#
+# --- Nicer prompt ---
+# $ conda config --set env_prompt '({name}) '
+# (adds in ~/.condarc the line: env_prompt '({name}) ')
+#
+# --- Automatic activation of environments upon cd (bash) ---
+# Add the following in your .bashrc
+# function cd {
+#          builtin cd "$@"
+#          RET=$?
+#          venv
+#          return $RET
+# }
+# venv (){
+#      conda activate $PWD/.${PWD##*/}_env > /dev/null 2>&1
+# }
+
+  
